--- a/Qt/CMakeLists.txt
+++ b/Qt/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 cmake_minimum_required(VERSION 3.16)
 
-project(helloworld VERSION 1.0.0 LANGUAGES CXX)
+project(MyProject VERSION 1.0.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -15,15 +15,15 @@ qt_standard_project_setup()   # This sets up the project with standard Qt settin
 add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 
-qt_add_executable(helloworld
+qt_add_executable(App
 	#mainwindow.ui 
    	#mainwindow.cpp
     main.cpp
 )
 
-target_link_libraries(helloworld PRIVATE Qt6::Widgets)
+target_link_libraries(App PRIVATE Qt6::Widgets)
 
-set_target_properties(helloworld PROPERTIES
+set_target_properties(App PROPERTIES
     WIN32_EXECUTABLE ON  # This is necessary for creating a Windows executable
     MACOSX_BUNDLE ON  # This is necessary for creating a macOS application bundle
 )
