--- a/STM32/HAL/CMakeLists.txt
+++ b/STM32/HAL/CMakeLists.txt
@@ -34,6 +34,10 @@ message("Build type: " ${CMAKE_BUILD_TYPE})
 # Enable CMake support for ASM and C languages
 enable_language(C ASM)
 
+########################################
+# EXECUTABLE
+########################################
+
 # Create an executable object type
 add_executable(${CMAKE_PROJECT_NAME})
 
