--- a/Cpp/.vscode/launch.json
+++ b/Cpp/.vscode/launch.json
@@ -7,7 +7,7 @@
 		"name": "MSVC Debug",
 		"type": "cppvsdbg",
 		"request": "launch",
-		"program": "${workspaceFolder}/build/<filename>.exe",  //修改      1
+		"program": "${workspaceFolder}/build/App.exe",  //修改      1
 		"args": [],
 		"environment": [],
 		"externalConsole": false,
